--- a/ETLyteDLL/ETLyteDLL.csproj
+++ b/ETLyteDLL/ETLyteDLL.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ResultWriters\DelimitedIndentedResultWriter.cs" />
     <Compile Include="ResultWriters\PlainTextResultWriter.cs" />
     <Compile Include="ResultWriters\ResultContext.cs" />
+    <Compile Include="Schema\Constraint.cs" />
     <Compile Include="Schema\SchemaField.cs" />
     <Compile Include="Schema\SchemaFile.cs" />
     <Compile Include="Sqlite\SqliteDb.cs" />
