--- a/ETLyteDLL/packages.config
+++ b/ETLyteDLL/packages.config
@@ -3,6 +3,14 @@
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net45" />
   <package id="LumenWorksCsvReader" version="3.9.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="SQLitePCL.pretty" version="1.0.0" targetFramework="net45" />
+  <package id="SQLitePCL.core.Functions" version="1.1.0" targetFramework="net45" />
+  <package id="SQLitePCL.pretty" version="1.1.0" targetFramework="net452" />
+  <package id="SQLitePCL.pretty.Functions" version="1.1.0" targetFramework="net45" />
   <package id="SQLitePCL.raw" version="0.8.2" targetFramework="net45" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.7" targetFramework="net45" />
+  <package id="SQLitePCLRaw.core" version="1.1.8" targetFramework="net452" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.7" targetFramework="net45" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.8" targetFramework="net452" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.8" targetFramework="net452" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.8" targetFramework="net452" />
 </packages>
